# VLPR

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  detector.cpp  detector.h  main.cpp  recognizer.cpp  recognizer.h  requirements.txt
cpp/: README.md  license-plate.pro
cpp/header/: mainwindow.h  plate.h  plate_detector.h  plate_recognizer.h  vehicle_tracker.h
cpp/source/: main_cli.cpp  plate.cpp  plate_detector.cpp  plate_recognizer.cpp  plate_tracker.cpp  process.cpp  test_bbox.cpp  vehicle_detector.cpp  vehicle_tracker.cpp
header/: plate.h  plate_detector.h  plate_tracker.h  process.h  recognizer.h  vehicle.h  vehicle_detector.h
python/: inference_cli.py  inference_gui.py  inference_image.py  license_plate.pyproject  main.py  main2.py  main3.py  main_cli.py  test.py
python/source/: functions.py  plate.py  plate_detector.py  plate_recognizer.py  plate_tracker.py  process.py  sort.py  vehicle.py  vehicle_detector.py
source/: detector.cpp  main.cpp  main_image.cpp  main_video.cpp  main_video_gui.cpp  mainwindow.cpp  plate.cpp  plate_detector.cpp  recognizer.cpp  test2.cpp  test3.cpp  test_detector.cpp  test_recognizer.cpp  test_tracker.cpp  vehicle.cpp
ui/: mainwindow.ui
